--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -3,11 +3,22 @@
     <head>
         <meta charset="UTF-8" />
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        {% block stylesheets %}
+
+            <link href="{{ asset('css/bootstrap.min.css') }}"  rel="stylesheet"/>
+            <link href="{{ asset('css/bootstrap-theme.css') }}"  rel="stylesheet"/>
+
+
+        {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
         {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+        {% block javascripts %}
+
+            <script src="{{ asset('js/bootstrap.min.js') }}"></script>
+
+
+        {% endblock %}
     </body>
 </html>
