--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -11,10 +11,12 @@
 
         {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+
     </head>
     <body>
         {% block body %}{% endblock %}
         {% block javascripts %}
+            <script src="{{ asset('js/jquery.min.js') }}"></script>
 
             <script src="{{ asset('js/bootstrap.min.js') }}"></script>
 
