--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -8,18 +8,17 @@
             <link href="{{ asset('css/bootstrap.min.css') }}"  rel="stylesheet"/>
             <link href="{{ asset('css/bootstrap-theme.css') }}"  rel="stylesheet"/>
 
-
         {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
 
+        <script data-main="{{ asset('bundles/formregistration/js/app') }}" src="{{ asset('js/require.js') }}"></script>
     </head>
     <body>
         {% block body %}{% endblock %}
         {% block javascripts %}
-            <script src="{{ asset('js/jquery.min.js') }}"></script>
+
 
             <script src="{{ asset('js/bootstrap.min.js') }}"></script>
-
 
         {% endblock %}
     </body>
