--- a/src/Form/RegistrationBundle/Resources/views/Default/index.html.twig
+++ b/src/Form/RegistrationBundle/Resources/views/Default/index.html.twig
@@ -20,28 +20,23 @@
 
 
 {% block body %}
-
-    {{ form_start(form,{'attr': {'novalidate': 'novalidate','class':'form-horizontal'}}) }}
-
     <div class="container">
+        <div class="row">
         <div class="col-md-4"></div>
         <div class="col-md-4" >
             <h3>{% trans %}registration{% endtrans %}</h3><br/>
-            <form role="form">
+            {{ form_start(form,{'attr': {'novalidate': 'novalidate','class':'form-horizontal'}}) }}
                 <div class="form-group">
                     {{ form_label(form.name)|trans|raw }}
                     {{ form_widget(form.name) }}
                     {{ form_errors(form.name) }}
 
                 </div>
-
                 <div class="form-group">
                     {{ form_label(form.email)|trans|raw }}
                     {{ form_widget(form.email) }}
                     {{ form_errors(form.email) }}
                 </div>
-
-
                 <div class="form-group">
                     {{ form_widget(form.password)|trans|raw }}
                     {{ form_errors(form.password)|trans|raw }}
@@ -50,22 +45,15 @@
                     </div>
                 </div>
 
+                <div class="form-group">
+                    {{ form_widget(form.roles)|trans|raw }}
+                    {{ form_errors(form.roles) }}
+                </div>
 
                 <button type="submit" class="btn btn-default">{% trans %}registration{% endtrans %}</button>
-            </form>
-
-
             {{ form_end(form) }}
-
+        </div>
         </div>
     </div>
-
-{% endblock %}
-
-{% block javascripts %}
-    {{ parent() }}
-
-    <script src="{{ asset('bundles/formregistration/js/passwordValidation.js') }}"></script>
-
 
 {% endblock %}
