Registration and autorisation was improved.

--- a/src/Form/RegistrationBundle/Resources/views/Admin/users.html.twig
+++ b/src/Form/RegistrationBundle/Resources/views/Admin/users.html.twig
@@ -11,7 +11,7 @@
                         User name: <b>{{ user.name }}</b>
                         <ul class="list-group">
                             <li class="list-group-item">Email: <b>{{ user.email }}</b></li>
-                            <li class="list-group-item">Role: <b>{{ user.roles.id }}</b></li>
+                            <li class="list-group-item">Role: <b>{{ user.role }}</b></li>
                         </ul>
                     </li>
                 {% endfor %}
