Captcha was added for registration form. It was implemented by using EWZRecaptchaBundle.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -12,6 +12,7 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
 
         <script data-main="{{ asset('bundles/formregistration/js/app') }}" src="{{ asset('js/require.js') }}"></script>
+        <script src='https://www.google.com/recaptcha/api.js'></script>
     </head>
     <body>
         {% block body %}{% endblock %}
