--- a/src/Form/RegistrationBundle/Resources/views/Default/Login.html.twig
+++ b/src/Form/RegistrationBundle/Resources/views/Default/Login.html.twig
@@ -39,7 +39,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="password">{% trans %}Password{% endtrans %}:</label>
+                        <label for="password">{% trans %}Login{% endtrans %}Password:</label>
                         <input type="password" class="form-control" id="password" name="_password" />
                     </div>
 
@@ -49,7 +49,7 @@
                         <input type="hidden" name="_target_path" value="/account" />
                     #}
 
-                    <button type="submit" class="btn btn-default">{% trans %}Login{% endtrans %}</button>
+                    <button type="submit">login</button>
                 </form>
 
 
