--- a/src/Form/RegistrationBundle/Resources/views/Default/index.html.twig
+++ b/src/Form/RegistrationBundle/Resources/views/Default/index.html.twig
@@ -50,6 +50,13 @@
                     {{ form_errors(form.role) }}
                 </div>
 
+
+                <div class="form-group">
+                    {% form_theme form 'EWZRecaptchaBundle:Form:ewz_recaptcha_widget.html.twig' %}
+
+                    {{ form_widget(form.recaptcha) }}
+                </div>
+
                 <button type="submit" class="btn btn-default">{% trans %}registration{% endtrans %}</button>
             {{ form_end(form) }}
         </div>
