Google captcha was added to registration and authorization forms.

--- a/src/Form/RegistrationBundle/Resources/views/Default/Login.html.twig
+++ b/src/Form/RegistrationBundle/Resources/views/Default/Login.html.twig
@@ -1,15 +1,14 @@
 {% extends '::base.html.twig' %}
-{#{% form_theme form _self %}#}
+{% form_theme form _self %}
 
 {% block form_errors %}
     {% spaceless %}
         {% if errors|length > 0 %}
             <div class="alert alert-danger" role="alert">
-                <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
                 <span class="sr-only">Error:</span>
                 <ul class="error_list">
                     {% for error in errors %}
-                        <li>{{ error.message|trans|raw }}</li>
+                        <li>{{ error.message|trans }}</li>
                     {% endfor %}
                 </ul>
             </div>
@@ -20,88 +19,42 @@
 
 
 {% block body %}
-
     <div class="container">
         <div class="row">
-            <div class="col-md-4"></div>
-            <div class="col-md-4">
+            <div class="col-md-3"></div>
+            <div class="col-md-6" >
+                <h3>{% trans %}login{% endtrans %}</h3><br/>
+                {{ form_start(form,{'attr': {'novalidate': 'novalidate','class':'form-horizontal'}}) }}
 
-                <h3>{% trans %}Login{% endtrans %}</h3>
+                <div class="form-group">
+                    {{ form_label(form.email)|trans|raw }}
+                    {{ form_widget(form.email) }}
+                    {{ form_errors(form.email) }}
+                </div>
 
-                {% if error %}
-                    <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-                {% endif %}
+                <div class="form-group">
+                    {{ form_label(form.password)|trans|raw }}
+                    {{ form_widget(form.password) }}
+                    {{ form_errors(form.password) }}
+                </div>
 
-                <form action="{{ path('login_check') }}" method="post" role="form">
-                    <div class="form-group">
-                        <label for="username">{% trans %}Login{% endtrans %}:</label>
-                        <input type="text" class="form-control" id="username" name="_username" value="{{ last_username }}" />
-                    </div>
+                <div id="captcha" ></div>
+                <input type="button" id="reset" class="btn btn-default" value="reset">
 
-                    <div class="form-group">
-                        <label for="password">{% trans %}Login{% endtrans %}Password:</label>
-                        <input type="password" class="form-control" id="password" name="_password" />
-                    </div>
-
-                    {#
-                        If you want to control the URL the user
-                        is redirected to on success (more details below)
-                        <input type="hidden" name="_target_path" value="/account" />
-                    #}
-
-                    <button type="submit">login</button>
-                </form>
-
-
+                <button type="submit" class="btn btn-default">{% trans %}registration{% endtrans %}</button>
+                {{ form_end(form) }}
             </div>
-            <div class="col-md-4"></div>
         </div>
     </div>
 
+{% endblock %}
 
 
+{% block javascript %}
+    <script src="{{ asset('bundles/formregistration/js/Captcha.js') }}"></script>
+    <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit"
+            async defer>
+    </script>
 
-
-    {#{{ form_start(form,{'attr': {'novalidate': 'novalidate', 'action': 'login_check'}}) }}#}
-
-    {#<div class="container">#}
-        {#<div class="col-md-4"></div>#}
-        {#<div class="col-md-4" >#}
-
-            {#{% if app.session.flashBag.has('login_error') %}#}
-                {#<div class="alert alert-danger">#}
-                    {#{% for msg in app.session.flashBag.get('login_error') %}#}
-                        {#{{ msg|trans }}#}
-                    {#{% endfor %}#}
-                {#</div>#}
-            {#{% endif %}#}
-
-
-            {#<h3>{% trans %}Login{% endtrans %}</h3><br/><br/>#}
-            {#<form role="form">#}
-
-                {#<div class="form-group">#}
-                    {#{{ form_label(form.email)|trans|raw }}#}
-                    {#{{ form_widget(form.email) }}#}
-                    {#{{ form_errors(form.email) }}#}
-                {#</div>#}
-
-
-
-                {#<div class="form-group">#}
-                    {#{{ form_label(form.password)|trans|raw }}#}
-                    {#{{ form_widget(form.password) }}#}
-                    {#{{ form_errors(form.password) }}#}
-                {#</div>#}
-
-
-                {#<button type="submit" class="btn btn-default">{% trans %}Log in{% endtrans %}</button>#}
-            {#</form>#}
-
-
-            {#{{ form_end(form) }}#}
-
-        {#</div>#}
-    {#</div>#}
-
+    {{ parent() }}
 {% endblock %}
