--- a/src/Form/RegistrationBundle/Resources/views/Default/index.html.twig
+++ b/src/Form/RegistrationBundle/Resources/views/Default/index.html.twig
@@ -52,15 +52,28 @@
 
 
                 <div class="form-group">
-                    {% form_theme form 'EWZRecaptchaBundle:Form:ewz_recaptcha_widget.html.twig' %}
-
-                    {{ form_widget(form.recaptcha) }}
+                    <div id="captcha" data-siteKey="{{ captcha_public_key }}" ></div>
                 </div>
 
-                <button type="submit" class="btn btn-default">{% trans %}registration{% endtrans %}</button>
+
+            <button type="submit" class="btn btn-default">{% trans %}registration{% endtrans %}</button>
             {{ form_end(form) }}
         </div>
         </div>
     </div>
 
+{% endblock %}
+
+{% block javascript %}
+    <script src="{{ asset('bundles/formregistration/js/passwordValidation.js') }}"></script>
+
+    <script src="{{ asset('bundles/formregistration/js/Captcha.js') }}"></script>
+
+
+    <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit"
+            async defer>
+    </script>
+
+
+    {{ parent() }}
 {% endblock %}
