Feedback form was added to base template.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -15,9 +15,47 @@
         <script src='https://www.google.com/recaptcha/api.js'></script>
     </head>
     <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}
+        {% block body %}
 
+
+        {% endblock %}
+
+        {% block footer %}
+            <div class="container footer">
+                <div class="row">
+                    <div class="col-md-12">
+
+                        <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal" style="display:block;margin: 0 auto;">
+                            {% trans %}feedback{% endtrans %}
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Modal -->
+            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                            <h4 class="modal-title" id="myModalLabel">Название модали</h4>
+                        </div>
+                        <div class="modal-body">
+
+                            {{ render(controller(
+                                'FormRegistrationBundle:Feedback:index'
+                            )) }}
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+        {% endblock %}
+
+        {% block javascripts %}
+            <script src="{{ asset('js/jquery.min.js') }}"></script>
 
             <script src="{{ asset('js/bootstrap.min.js') }}"></script>
 
