--- a/src/Form/RegistrationBundle/Resources/views/Default/Login.html.twig
+++ b/src/Form/RegistrationBundle/Resources/views/Default/Login.html.twig
@@ -38,14 +38,21 @@
                     {{ form_errors(form.password) }}
                 </div>
 
-                <div id="captcha" ></div>
-                <input type="button" id="reset" class="btn btn-default" value="reset">
+                <div class="form-group">
+                    <div id="captcha" data-siteKey="{{ captcha_public_key }}" ></div>
+                </div>
 
                 <button type="submit" class="btn btn-default">{% trans %}registration{% endtrans %}</button>
                 {{ form_end(form) }}
+
             </div>
         </div>
     </div>
+
+
+
+
+
 
 {% endblock %}
 
