--- a/src/Form/RegistrationBundle/Resources/views/Feedback/index.html.twig
+++ b/src/Form/RegistrationBundle/Resources/views/Feedback/index.html.twig
@@ -22,6 +22,10 @@
     <div id="feedback_captcha" data-siteKey="{{ captcha_public_key }}" ></div>
 </div>
 
+<div id="error_box" class="alert alert-danger" style="display: none;" role="alert">
+    <p id="errorFeedback">{% trans %}fill_fields_and_prove_you_are_a_human{% endtrans %}</p>
+</div>
+
 <button type="button" id="feedback_submit" class="btn btn-default">{% trans %}send_feedback{% endtrans %}</button>
 {{ form_end(form) }}
 
